include_directories(./include)
include_directories(../tool)
aux_source_directory(./src SRCS)
add_library(policymgr SHARED ${SRCS})
target_link_libraries(policymgr tool)
target_link_libraries(policymgr pthread)
target_link_libraries(policymgr ssl)
target_link_libraries(policymgr crypto)
target_link_libraries(policymgr boost_system)