include_directories(./include)
include_directories(../tool)
include_directories(../third/jsoncpp/include)
#aux_source_directory(./src SRCS)
add_library(policymgr SHARED src/NXLHttpClient.cpp src/TalkWithCC.cpp src/log.cpp src/exceptionhandle.cpp src/PolicyModelList.cpp src/patch.cpp)
target_link_libraries(policymgr tool)
target_link_libraries(policymgr pthread)
target_link_libraries(policymgr ssl)
target_link_libraries(policymgr crypto)
target_link_libraries(policymgr boost_system)
#target_link_libraries(policymgr jsoncpp)